# github-release-download

./: Cargo.toml
.github/: dependabot.yml
src/: download.rs  github.rs  github_release.rs  lib.rs  main.rs
