[package]
name = "github-update"
version = "0.2.0"
authors = ["DanSnow <dododavid006@gmail.com>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
dirs = "6.0.0"
http = "1.2.0"
indicatif = "0.17.8"
once_cell = "1.19.0"
regex = "1.10.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_regex = "1.1.0"
skim = "0.16.0"
thiserror = "2.0.11"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.12"
ureq = { version = "3.0.4", features = ["json"] }

[[bin]]
name = "grd"
path = "src/bin/grd.rs"

[[bin]]
name = "github-update"
path = "src/bin/github-update.rs"
